added firebase listener for better fetching of data
details having trouble with constraints on your thoughts and other respones

--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -137,10 +137,10 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kwg-kv-A05">
-                                                <rect key="frame" x="22" y="414" width="359" height="213"/>
+                                                <rect key="frame" x="22" y="414" width="359" height="230"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="qlI-Ep-SdF">
-                                                        <rect key="frame" x="8" y="37" width="343" height="125"/>
+                                                        <rect key="frame" x="8" y="37" width="343" height="134"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <color key="textColor" systemColor="labelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
@@ -153,9 +153,9 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hmp-kF-Qp4">
-                                                        <rect key="frame" x="8" y="170" width="343" height="35"/>
+                                                        <rect key="frame" x="8" y="187" width="343" height="35"/>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                                        <buttonConfiguration key="configuration" style="filled" title="Next">
                                                             <color key="baseBackgroundColor" systemColor="labelColor"/>
                                                         </buttonConfiguration>
                                                         <connections>
@@ -166,12 +166,13 @@
                                                 <color key="backgroundColor" red="0.82745098039999998" green="0.82745098039999998" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="hmp-kF-Qp4" firstAttribute="trailing" secondItem="qlI-Ep-SdF" secondAttribute="trailing" id="4OO-v9-DAy"/>
+                                                    <constraint firstAttribute="height" constant="230" id="7gF-CA-oqU"/>
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="IlU-Zr-TGv" secondAttribute="trailing" constant="20" symbolic="YES" id="BfA-S0-g7A"/>
                                                     <constraint firstItem="qlI-Ep-SdF" firstAttribute="leading" secondItem="IlU-Zr-TGv" secondAttribute="leading" id="GLs-yK-ZEp"/>
                                                     <constraint firstItem="hmp-kF-Qp4" firstAttribute="trailing" secondItem="kwg-kv-A05" secondAttribute="trailingMargin" id="XHC-NO-UQ4"/>
-                                                    <constraint firstItem="hmp-kF-Qp4" firstAttribute="top" secondItem="qlI-Ep-SdF" secondAttribute="bottom" constant="8" id="cWC-XQ-vot"/>
+                                                    <constraint firstItem="hmp-kF-Qp4" firstAttribute="top" secondItem="qlI-Ep-SdF" secondAttribute="bottom" constant="16" id="cWC-XQ-vot"/>
                                                     <constraint firstItem="hmp-kF-Qp4" firstAttribute="leading" secondItem="kwg-kv-A05" secondAttribute="leadingMargin" id="dK1-Uf-q7O"/>
-                                                    <constraint firstItem="hmp-kF-Qp4" firstAttribute="top" secondItem="qlI-Ep-SdF" secondAttribute="bottom" constant="8" id="k5c-pE-aTj"/>
+                                                    <constraint firstItem="hmp-kF-Qp4" firstAttribute="top" secondItem="qlI-Ep-SdF" secondAttribute="bottom" constant="16" id="k5c-pE-aTj"/>
                                                     <constraint firstItem="qlI-Ep-SdF" firstAttribute="top" secondItem="IlU-Zr-TGv" secondAttribute="bottom" constant="8" symbolic="YES" id="kw3-RD-kWD"/>
                                                     <constraint firstItem="hmp-kF-Qp4" firstAttribute="leading" secondItem="qlI-Ep-SdF" secondAttribute="leading" id="lmI-Qu-6FB"/>
                                                     <constraint firstItem="IlU-Zr-TGv" firstAttribute="top" secondItem="kwg-kv-A05" secondAttribute="topMargin" id="p2P-sa-Qce"/>
@@ -203,11 +204,11 @@
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="r2r-q1-XW5" secondAttribute="bottom" constant="8" id="3DS-WH-0yq"/>
                                                     <constraint firstAttribute="trailing" secondItem="r2r-q1-XW5" secondAttribute="trailing" constant="8" id="7m1-VO-fFD"/>
+                                                    <constraint firstItem="1gz-gV-DLt" firstAttribute="top" secondItem="PRY-Gg-LBF" secondAttribute="top" constant="8" id="8XU-Vc-jWg"/>
                                                     <constraint firstItem="r2r-q1-XW5" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leading" constant="8" id="A6v-6e-jQ1"/>
-                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1gz-gV-DLt" secondAttribute="trailing" constant="20" symbolic="YES" id="BrY-fb-TVP"/>
-                                                    <constraint firstItem="1gz-gV-DLt" firstAttribute="top" secondItem="PRY-Gg-LBF" secondAttribute="top" constant="8" id="QhG-4J-BoL"/>
-                                                    <constraint firstItem="1gz-gV-DLt" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leading" constant="12" id="RdH-5d-ecB"/>
-                                                    <constraint firstItem="r2r-q1-XW5" firstAttribute="top" secondItem="1gz-gV-DLt" secondAttribute="bottom" constant="8" id="bsB-51-B6O"/>
+                                                    <constraint firstItem="1gz-gV-DLt" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leading" constant="12" id="GBi-oQ-Rra"/>
+                                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1gz-gV-DLt" secondAttribute="trailing" constant="20" symbolic="YES" id="IJT-bn-0Iv"/>
+                                                    <constraint firstItem="r2r-q1-XW5" firstAttribute="top" secondItem="1gz-gV-DLt" secondAttribute="bottom" constant="8" symbolic="YES" id="Sa7-Wz-tZ2"/>
                                                 </constraints>
                                             </view>
                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="spS-9h-hu2" userLabel="ViewFacts">
@@ -244,7 +245,6 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="kwg-kv-A05" secondAttribute="bottom" constant="423" id="3jp-0S-qqm"/>
                                             <constraint firstItem="Ckh-aI-jy7" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="22" id="6hd-mq-tCh"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="trailing" secondItem="PRY-Gg-LBF" secondAttribute="trailing" id="6z5-MJ-vn7"/>
                                             <constraint firstItem="Ckh-aI-jy7" firstAttribute="top" secondItem="rQO-mY-x7G" secondAttribute="bottom" constant="18.666666666666686" id="BSe-8w-cB2"/>
@@ -252,6 +252,7 @@
                                             <constraint firstAttribute="height" constant="1050" id="Oxb-4N-cSr"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="leading" secondItem="Ckh-aI-jy7" secondAttribute="leading" id="Qgr-ex-pMx"/>
                                             <constraint firstAttribute="trailing" secondItem="Ckh-aI-jy7" secondAttribute="trailing" constant="16" id="Y5I-WK-WcX"/>
+                                            <constraint firstItem="PRY-Gg-LBF" firstAttribute="top" secondItem="kwg-kv-A05" secondAttribute="bottom" constant="82" id="aHZ-OX-YkK"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="top" secondItem="Ckh-aI-jy7" secondAttribute="bottom" constant="19" id="clc-sX-Ojr"/>
                                             <constraint firstAttribute="trailing" secondItem="spS-9h-hu2" secondAttribute="trailing" constant="16" id="eZV-pj-OtJ"/>
                                             <constraint firstItem="rQO-mY-x7G" firstAttribute="top" secondItem="cG6-tM-adv" secondAttribute="top" constant="20" id="hZ0-1Q-2Ei"/>
