cleaner code and setup. removed old
in the details view, i removed old commented code for design changes like shadow text colors background

--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -209,7 +209,7 @@
                                                     <constraint firstItem="r2r-q1-XW5" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leading" constant="8" id="A6v-6e-jQ1"/>
                                                     <constraint firstItem="1gz-gV-DLt" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leading" constant="12" id="GBi-oQ-Rra"/>
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1gz-gV-DLt" secondAttribute="trailing" constant="20" symbolic="YES" id="IJT-bn-0Iv"/>
-                                                    <constraint firstItem="r2r-q1-XW5" firstAttribute="top" secondItem="1gz-gV-DLt" secondAttribute="bottom" constant="8" symbolic="YES" id="Sa7-Wz-tZ2"/>
+                                                    <constraint firstItem="r2r-q1-XW5" firstAttribute="top" secondItem="1gz-gV-DLt" secondAttribute="bottom" constant="8" symbolic="YES" id="Q7Q-0v-CKf"/>
                                                 </constraints>
                                             </view>
                                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="spS-9h-hu2" userLabel="ViewFacts">
