--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -118,10 +118,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="397" height="1250"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rQO-mY-x7G">
-                                                <rect key="frame" x="22" y="20" width="359" height="20.333333333333329"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="359" id="q1w-KE-fA1"/>
-                                                </constraints>
+                                                <rect key="frame" x="20" y="20" width="51" height="20.333333333333329"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -246,13 +243,13 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="Ckh-aI-jy7" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="22" id="6hd-mq-tCh"/>
-                                            <constraint firstAttribute="trailing" secondItem="rQO-mY-x7G" secondAttribute="trailing" constant="16" id="9ev-9X-59i"/>
                                             <constraint firstItem="Ckh-aI-jy7" firstAttribute="top" secondItem="rQO-mY-x7G" secondAttribute="bottom" constant="18.666666666666686" id="BSe-8w-cB2"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="22" id="DHj-ED-AXs"/>
                                             <constraint firstAttribute="trailing" secondItem="PRY-Gg-LBF" secondAttribute="trailing" constant="16" id="MG0-c5-Sqa"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="top" secondItem="Ckh-aI-jy7" secondAttribute="bottom" constant="19" id="Mv6-U1-H5E"/>
                                             <constraint firstAttribute="bottom" secondItem="spS-9h-hu2" secondAttribute="bottom" constant="55" id="OhW-5D-aUs"/>
                                             <constraint firstAttribute="height" constant="1250" id="Oxb-4N-cSr"/>
+                                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="rQO-mY-x7G" secondAttribute="trailing" constant="326" id="Q7F-cm-XZQ"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="leading" secondItem="Ckh-aI-jy7" secondAttribute="leading" id="Qgr-ex-pMx"/>
                                             <constraint firstAttribute="trailing" secondItem="Ckh-aI-jy7" secondAttribute="trailing" constant="16" id="Y5I-WK-WcX"/>
                                             <constraint firstItem="PRY-Gg-LBF" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="22" id="ava-yP-7NC"/>
@@ -261,7 +258,7 @@
                                             <constraint firstItem="rQO-mY-x7G" firstAttribute="top" secondItem="cG6-tM-adv" secondAttribute="top" constant="20" id="hZ0-1Q-2Ei"/>
                                             <constraint firstItem="PRY-Gg-LBF" firstAttribute="top" secondItem="kwg-kv-A05" secondAttribute="bottom" constant="134" id="oHF-d8-JTi"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="trailing" secondItem="Ckh-aI-jy7" secondAttribute="trailing" id="p8F-w7-T8r"/>
-                                            <constraint firstItem="rQO-mY-x7G" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cG6-tM-adv" secondAttribute="leading" constant="20" symbolic="YES" id="qyq-Hb-sTK"/>
+                                            <constraint firstItem="rQO-mY-x7G" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="20" symbolic="YES" id="qyq-Hb-sTK"/>
                                             <constraint firstItem="spS-9h-hu2" firstAttribute="top" secondItem="PRY-Gg-LBF" secondAttribute="bottom" constant="27" id="sJK-ci-wD3"/>
                                             <constraint firstItem="spS-9h-hu2" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="22" id="vnl-Zc-jXH"/>
                                         </constraints>
@@ -271,6 +268,7 @@
                                     <constraint firstItem="cG6-tM-adv" firstAttribute="trailing" secondItem="Uph-XT-k9b" secondAttribute="trailing" id="4kD-r6-NOQ"/>
                                     <constraint firstItem="isq-wE-kpR" firstAttribute="bottom" secondItem="cG6-tM-adv" secondAttribute="bottom" id="GG9-6F-hCh"/>
                                     <constraint firstItem="cG6-tM-adv" firstAttribute="top" secondItem="isq-wE-kpR" secondAttribute="top" id="Ha5-4R-iT2"/>
+                                    <constraint firstItem="cG6-tM-adv" firstAttribute="width" secondItem="O4Z-41-IOQ" secondAttribute="width" multiplier="1.01018" id="MfT-Rr-9GW"/>
                                     <constraint firstItem="isq-wE-kpR" firstAttribute="trailing" secondItem="cG6-tM-adv" secondAttribute="trailing" id="VrT-NM-bHD"/>
                                     <constraint firstItem="cG6-tM-adv" firstAttribute="leading" secondItem="Uph-XT-k9b" secondAttribute="leading" id="mso-QS-MA0"/>
                                     <constraint firstItem="cG6-tM-adv" firstAttribute="leading" secondItem="isq-wE-kpR" secondAttribute="leading" id="vNz-4o-EFs"/>
